TAG: targetedalleleload-6-0-14-1
DATE: 01/02/2020
STAFF: sc
CHANGES: TR13206 - update PROMOTER values from 'This is a new promoter *'
  to 'human beta-actin promoter, SV40 polyA' in all four config files

TAG: targetedalleleload-6-0-12-4
TAG: targetedalleleload-6-0-12-3
TAG: targetedalleleload-6-0-12-2
DATE: 03/07/2018
STAFF: sc
CHANGES: 
1) TR12806 Update molecular note template in configs
2) TR12817 - new file with different mutation values, remove sequencing of notes

TAG: targetedalleleload-6-0-12-1
DATE: 03/07/2018
STAFF: sc
CHANGES: TR12662 GMC project
1) targetedalleleload.sh - auto-sequencing

TAG: targetedalleleload-tr12662-BP
DATE: 02/01/2018
STAFF: sc
CHANGES: GMC project

TAG: targetedalleleload-6-0-10-1
DATE: 04/27/2017
STAFF: lec 
CHANGES:
1) TR12083/postgres/infrastucture/all_allele.nomenSymbol is obsolete

TAG: targetedalleleload-6-0-7-1
DATE: 01/05/2017
STAFF: lec 
CHANGES:
1) TR12069/obsolete db.setAutoTranslate()

TAG: targetedalleleload-6-0-5-2
TAG: targetedalleleload-6-0-5-1
DATE: 08/11/2016
STAFF: lec
CHANGES: 
1) while testing TR12083/lib_py_dataload/loadlib change, found loadlib was not used bin/QCreport.py
2) added .gitignore

TAG: targetedalleleload-6-0-4-3
TAG: targetedalleleload-6-0-4-2
TAG: targetedalleleload-6-0-4-1
DATE: 04/29/2016, 05/09/2016
STAFF: lec
CHANGES: TR12069/postgres cleanup
1) convert to Git
2) add "db.setAutoTranslate"

TAG: targetedalleleload-6-0-2-1
DATE: 02/23/2016
STAFF: sc
CHANGES: Project FL US181/TR12264/TR12265
1) new reports: bin/Dupe_MCL_assoc.py, bin/Orphaned_ApprovedAlleles.py
2) updated report bin/dupAlleleRpt.py
3) index.html - added new reports

TAG: targetedalleleload-6-0-1-3
DATE: 11/30/2015
STAFF: dbm
CHANGES: TR11904 & TR12199
1) tal_common.config.default: Don't override MAIL_LOG_PROC and MAIL_LOG_CUR

TAG: targetedalleleload-6-0-1-2
TAG: targetedalleleload-6-0-1-1
DATE: 10/20/2015
STAFF: lec
CHANGES:
1) TR12011/12070/scrum-dog/use new input file
see /mgi/all/wts_projects/12000/12011/tr12011.csh